<?xml version="1.0"   encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dip"
        android:paddingTop="10dip" >

        <ImageView
            android:id="@+id/dialog_title_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/dialog_title_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dip"
            android:layout_toRightOf="@id/dialog_title_image"
            android:text="@string/warnning_title"
            android:textColor="#000000"
            android:textSize="30sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:background="#0099CC" />

    <TextView
        android:id="@+id/info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginTop="10dip"
        android:textSize="24sp"
        android:text="@string/warnning"
        android:textColor="#000000" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal">

        <Button
            android:id="@+id/sdcard_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingBottom="10dip"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dip"
            android:layout_marginLeft="30dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/sdcard_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dip"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dip"
            android:layout_alignBaseline="@id/sdcard_cancel"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:text="@string/sure" />
    </RelativeLayout>

</LinearLayout>